--- a/contest/global.cfg
+++ b/contest/global.cfg
@@ -1,11 +1,12 @@
-A=5;
-B=5;
-C=5;
-D=5;
-E=5;
-F=5;
-G=5;
-H=5;
-I=5;
-J=5;
+taks:
+A = 5;
+B = 5;
+C = 5;
+D = 5;
+E = 5;
+F = 5;
+G = 5;
+H = 5;
+I = 5;
+J = 5;
 
